--- a/resources/lang/kz.json
+++ b/resources/lang/kz.json
@@ -39,6 +39,7 @@
     "bc1" : "Call-центр",
     "bc2" : "Мобильді",
     "bc3" : "Обратный звонок",
+    "bc3_1" : "Обратная связь",
     "bc4" : "Аты-жөні",
     "bc5" : "Ұялы телефон",
     "bc6" : "Удобное время (время Астаны)",
