last updates from testers

--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -75,7 +75,7 @@
     "aboutus" : "О компании",
     "cit" : "Городской",
     "ho" : "Головной офис",
-    "fil" : "Филиал",
+    "fil" : "Филиалы",
     "bod" : "Совет директоров",
     "prav" : "Правление",
     "od" : "Иные руководящие работники",
